Validate all HTML markups using the validator

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -179,7 +179,7 @@
                     to get in touch, we’d love to
                     hear from you!</p>
 
-                  <a href="tel:+1 840 841 25 69"
+                  <a href="tel:+18408412569"
                     class="d-inline-block h2 fw-semibold cursor-hs-scale contact-rfd-mb-60">+1 840
                     841 25
                     69</a>
@@ -198,19 +198,19 @@
                       <input
                         class="form-control cfs-14 shadow-none form-brd-phl-lh-3 rounded-3 border border-secondary-subtle"
                         type="text" id="name" placeholder="Name" aria-label="name" required>
-                    </div form-basic-rd-ph-labels>
+                    </div>
 
                     <div class="col-12 col-md-6">
                       <input
                         class="form-control cfs-14 shadow-none form-brd-phl-lh-3 rounded-3 border border-secondary-subtle"
                         type="email" id="email" placeholder="Email" aria-label="email" required>
-                    </div form-basic-rd-ph-labels>
+                    </div>
 
                     <div class="col-12">
                       <input
                         class="form-control cfs-14 shadow-none form-brd-phl-lh-3 rounded-3 border border-secondary-subtle"
                         type="text" id="subject" placeholder="Subject" aria-label="subject">
-                    </div form-basic-rd-ph-labels>
+                    </div>
 
                     <div class="col-12">
                       <textarea
