--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -167,25 +167,24 @@
 
                 <div class="col-auto">
                   <div class="btn-group" role="group" aria-label="Filter options">
-                    <input type="radio" class="btn-check pf-maf-radio" name="filter" id="all" autocomplete="off" checked
-                      value="*">
+                    <input type="radio" class="btn-check pf-maf-radio" name="filter" id="all" checked value="*">
                     <label
                       class="btn btn-outline-primary cursor-hs-scale mx-sm-2 border-0 bg-transparent opacity-50 cfs-13 cfs-sm-14 fw-medium pf-maf-label"
                       for="all">All</label>
 
-                    <input type="radio" class="btn-check pf-maf-radio" name="filter" id="branding" autocomplete="off"
+                    <input type="radio" class="btn-check pf-maf-radio" name="filter" id="branding"
                       value=".pf-maf-filter-brand">
                     <label
                       class="btn btn-outline-primary cursor-hs-scale mx-sm-2 border-0 bg-transparent opacity-50 cfs-13 cfs-sm-14 fw-medium pf-maf-label"
                       for="branding">Branding</label>
 
-                    <input type="radio" class="btn-check pf-maf-radio" name="filter" id="mobileApp" autocomplete="off"
+                    <input type="radio" class="btn-check pf-maf-radio" name="filter" id="mobileApp"
                       value=".pf-maf-filter-app">
                     <label
                       class="btn btn-outline-primary cursor-hs-scale mx-sm-2 border-0 bg-transparent opacity-50 cfs-13 cfs-sm-14 fw-medium pf-maf-label"
                       for="mobileApp">Mobile App</label>
 
-                    <input type="radio" class="btn-check pf-maf-radio" name="filter" id="creative" autocomplete="off"
+                    <input type="radio" class="btn-check pf-maf-radio" name="filter" id="creative"
                       value=".pf-maf-filter-web">
                     <label
                       class="btn btn-outline-primary cursor-hs-scale mx-sm-2 border-0 bg-transparent opacity-50 cfs-13 cfs-sm-14 fw-medium pf-maf-label"
@@ -199,7 +198,7 @@
                   <div class="h-100 position-relative anim-swipe-in-lr-zb anim-gsap"
                     data-animation="anim-si-lr-zb-animate">
                     <div class="w-100 h-100 position-absolute z-n1">
-                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/1.jpg">
+                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/1.jpg" alt="Brochure Cover">
                     </div>
 
                     <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
@@ -221,7 +220,8 @@
                   <div class="h-100 position-relative anim-swipe-in-lr-zb anim-gsap"
                     data-animation="anim-si-lr-zb-animate">
                     <div class="w-100 h-100 position-absolute z-n1">
-                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/10.jpg">
+                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/10.jpg"
+                        alt="Hanging String Button">
                     </div>
 
                     <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
@@ -243,7 +243,8 @@
                   <div class="h-100 position-relative anim-swipe-in-lr-zb anim-gsap"
                     data-animation="anim-si-lr-zb-animate">
                     <div class="w-100 h-100 position-absolute z-n1">
-                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/3.jpg">
+                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/3.jpg"
+                        alt="Fancy Construction">
                     </div>
 
                     <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
@@ -265,7 +266,7 @@
                   <div class="h-100 position-relative anim-swipe-in-lr-zb anim-gsap"
                     data-animation="anim-si-lr-zb-animate">
                     <div class="w-100 h-100 position-absolute z-n1">
-                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/4.jpg">
+                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/4.jpg" alt="Airpods">
                     </div>
 
                     <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
@@ -287,7 +288,8 @@
                   <div class="h-100 position-relative anim-swipe-in-lr-zb anim-gsap"
                     data-animation="anim-si-lr-zb-animate">
                     <div class="w-100 h-100 position-absolute z-n1">
-                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/6.jpg">
+                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/6.jpg"
+                        alt="Creative Construction">
                     </div>
 
                     <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
@@ -309,7 +311,8 @@
                   <div class="h-100 position-relative anim-swipe-in-lr-zb anim-gsap"
                     data-animation="anim-si-lr-zb-animate">
                     <div class="w-100 h-100 position-absolute z-n1">
-                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/5.jpg">
+                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/5.jpg"
+                        alt="Nike Logo as Mens Earing">
                     </div>
 
                     <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
@@ -331,7 +334,7 @@
                   <div class="h-100 position-relative anim-swipe-in-lr-zb anim-gsap"
                     data-animation="anim-si-lr-zb-animate">
                     <div class="w-100 h-100 position-absolute z-n1">
-                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/7.jpg">
+                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/7.jpg" alt="Book Cover Design">
                     </div>
 
                     <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
@@ -353,7 +356,7 @@
                   <div class="h-100 position-relative anim-swipe-in-lr-zb anim-gsap"
                     data-animation="anim-si-lr-zb-animate">
                     <div class="w-100 h-100 position-absolute z-n1">
-                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/8.jpg">
+                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/8.jpg" alt="Poster Desgin">
                     </div>
 
                     <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
