--- a/pages/team.html
+++ b/pages/team.html
@@ -214,6 +214,7 @@
           <!-- || Block - Team profiles card anim -->
           <section class="bg-white team-profiles-card-anim">
             <div class="container">
+              <h2 class="visually-hidden">Team</h2>
               <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 gy-5 gx-lg-5 gx-xl-4 gx-xxl-5">
                 <div class="col">
                   <div
